--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,10 +3,7 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile-dev
-      args:
-        - rails_env=development
-        - rack_env=development
+      dockerfile: dev.dockerfile
     environment:
       - PORT=8080
       - DATABASE_URL=postgres://user:password@postgres:5432/myresume
