--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     environment:
       - PORT=8080
       - DATABASE_URL=postgres://user:password@postgres:5432/myresume
+      - SECRET_KEY_BASE=dev
     volumes:
       - $PWD:/home
     ports:
