--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,11 @@ services:
       - PORT=8080
       - DATABASE_URL=postgres://user:password@postgres:5432/myresume
       - SECRET_KEY_BASE=dev
+      - AWS_REGION=
+      - AWS_ACCESS_KEY_ID=
+      - AWS_SECRET_ACCESS_KEY=
+      - AWS_S3_BUCKET=
+      - AWS_S3_OBJECT_KEY=
     volumes:
       - $PWD:/home
     ports:
@@ -21,4 +26,3 @@ services:
       - POSTGRES_PASSWORD=password
       - PGPASSWORD=password
       - POSTGRES_DB=myresume
-
